﻿﻿﻿﻿                     wxFormBuilder ChangeLog
************************************************************************
date Version 3.00.27 (Beta 3)
^ Implemented FS#142 — "set wxStaticline’s default value to wxEXPAND"

03-01-2007 Version 3.00.26 (Beta 3)
* Fixed FS#136 — "Panel size doesn't change properly when 'size' is set to -1"
* Fixed FS#137 — "Allow -1 for the 'size' property if the minimum/maximum size is set."
* Fixed FS#113 — "Error when undoing cutting controls."
* Fixed FS#97 — "Menu items in XRC preview window involve wxFB functionality"
^ Implemented FS#117 — "ESC should close the XRC preview form."
   Note: This will never work on wxGTK because it does not set key events to frames or dialogs.

02-28-2007 Version 3.00.25 (Beta 3)
* Fixed FS#100 — "Problem with the relative path of XPM"
* Fixed FS#126 — "Splitter window control without a panel does not get redrawn correctly."
* Fixed FS#132 — "Splitter window control moves its sash unexpectedly at design time."
* Fixed spacer not displaying properly in most sizers.
  This was a regression in build 3.00.23.
* Fixed FS#133 — "Error when moving between designer/C++/XRC tabs."
  This was a regression in build 3.00.24.
^ Now connecting an event handler to idle events for splitter windows to reliably
  set the initial sash position.

02-27-2007 Version 3.00.24 (Beta 3)
* Fixed FS#131 — "Folder not getting released after saving a project into it."
* Fixed FS#114 — "Not being able to cut non-top-level sizers and paste them as top-level sizers."
* Fixed FS#124 — "Option to create a sizer around a control does not work on top-level sizers."
* Fixed FS#104 — "Editing XRC/C++ files should be disallowed completely or allowed to affect GUI properties."
* Fixed FS#127 — "Change 'new' label to 'new project'."
* Fixed FS#125 — "Buggy cut/paste of panels from splitter window controls."

02-26-2007 Version 3.00.23 (Beta 3)
+ Added wxGridBagSizer. This closes FS#58.